[gd_scene load_steps=6 format=3 uid="uid://bgqhlljfk7qnw"]

[ext_resource type="Script" uid="uid://rt13vqeryiqi" path="res://Scripts/Town/town.gd" id="1_iau6b"]
[ext_resource type="Texture2D" uid="uid://dxa1nl5qlu7dw" path="res://Assets/Textures/town_background.png" id="1_kswdu"]
[ext_resource type="Script" uid="uid://dhjihalxepqjf" path="res://Scripts/Town/entrance.gd" id="3_28ev0"]
[ext_resource type="Script" uid="uid://cjbu7t2gt6yu0" path="res://Scripts/Town/entrances.gd" id="3_ckvn4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kswdu"]
size = Vector2(69, 112)

[node name="Town" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_iau6b")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_kswdu")

[node name="Entrances" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("3_ckvn4")

[node name="StorageEntrance" type="Area2D" parent="Entrances"]
position = Vector2(38, 413)
script = ExtResource("3_28ev0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrances/StorageEntrance"]
position = Vector2(6.5, -11)
shape = SubResource("RectangleShape2D_kswdu")

[node name="ChurchEntrance" type="Area2D" parent="Entrances"]
position = Vector2(197, 346)
script = ExtResource("3_28ev0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrances/ChurchEntrance"]
position = Vector2(6.5, -11)
shape = SubResource("RectangleShape2D_kswdu")

[node name="InfirmaryEntrance" type="Area2D" parent="Entrances"]
position = Vector2(311, 102)
script = ExtResource("3_28ev0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrances/InfirmaryEntrance"]
position = Vector2(6.5, -11)
shape = SubResource("RectangleShape2D_kswdu")

[node name="TownhallEntrance" type="Area2D" parent="Entrances"]
position = Vector2(480, 137)
script = ExtResource("3_28ev0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrances/TownhallEntrance"]
position = Vector2(6.5, -11)
shape = SubResource("RectangleShape2D_kswdu")

[node name="FieldEntrance" type="Area2D" parent="Entrances"]
position = Vector2(754, 153)
script = ExtResource("3_28ev0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrances/FieldEntrance"]
position = Vector2(6.5, -11)
shape = SubResource("RectangleShape2D_kswdu")

[node name="SmithyEntrance" type="Area2D" parent="Entrances"]
position = Vector2(738, 443)
script = ExtResource("3_28ev0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrances/SmithyEntrance"]
position = Vector2(6.5, -11)
shape = SubResource("RectangleShape2D_kswdu")

[connection signal="mouse_entered" from="Entrances/StorageEntrance" to="Entrances/StorageEntrance" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Entrances/StorageEntrance" to="Entrances/StorageEntrance" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Entrances/ChurchEntrance" to="Entrances/ChurchEntrance" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Entrances/ChurchEntrance" to="Entrances/ChurchEntrance" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Entrances/InfirmaryEntrance" to="Entrances/InfirmaryEntrance" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Entrances/InfirmaryEntrance" to="Entrances/InfirmaryEntrance" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Entrances/TownhallEntrance" to="Entrances/TownhallEntrance" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Entrances/TownhallEntrance" to="Entrances/TownhallEntrance" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Entrances/FieldEntrance" to="Entrances/FieldEntrance" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Entrances/FieldEntrance" to="Entrances/FieldEntrance" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Entrances/SmithyEntrance" to="Entrances/SmithyEntrance" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Entrances/SmithyEntrance" to="Entrances/SmithyEntrance" method="_on_mouse_exited"]
